# OS-Chat

./: .gitignore  CMakeList.txt  CMakeLists.txt  LinkedList.c  LinkedList.h  LinkedListStub.c  ProjectProposal.md  README.md  chatList.c  chatList.h  index.html  main.c  mainPool.c  requestHandler.c  script.js  server  server.c  server.h  taskHandler.c  testServer.c  threadpool.c  threadpool.h
Networking/: Server.c  Server.h  test.c
UI/: 404.html  chatLayout.css  chatTemplate.html  index.css  index.html  mainWebpage.html  script.js
docs/: 6_MultiThreadedChat_FinalPresentation.pptx  ProjectProposal.md  Protokoll.md  TestPlan
docs/resources/: ClassDiagram.drawio
tests/: IntegrationTesting.c  UnitTesting.c
